<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/altadia"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_light" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardQR"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/bgBtnDefault"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/linear_scanner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="0.6"
                        android:text="@string/scan_item"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="36sp" />

                    <ImageView
                        android:id="@+id/qr_scanner"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="0.4"
                        android:src="@drawable/qr_scanner"
                        app:tint="@color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSTK"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/bgBtnDefault"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/linear_stock"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="0.6"
                        android:text="@string/stock_take"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="36sp" />

                    <ImageView
                        android:id="@+id/stock_take"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="0.4"
                        android:src="@drawable/stock_take"
                        app:tint="@color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardOut"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/bgBtnOff"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/linear_logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="0.6"
                        android:text="@string/log_out"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="36sp" />

                    <ImageView
                        android:id="@+id/log_out"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="0.4"
                        android:src="@drawable/log_out"
                        app:tint="@color/red" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>