<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/result_unload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="40dp">

                <ImageView
                    android:id="@+id/dashboard"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/logo_light"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:id="@+id/resultScanner"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="right|center"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/qr_scanner"
                    app:tint="@color/red"
                    tools:ignore="RtlHardcoded" />

            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/frmInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frameLayout"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/batch_number"
                                android:textColor="@color/red"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/batchDetail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="12dp"
                                android:textSize="28sp" />


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/material_number"
                                android:textColor="@color/red"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/idDetail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="12dp"
                                android:textSize="28sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/material_name"
                                android:textColor="@color/red"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/nameDetail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="12dp"
                                android:textSize="28sp" />


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Material Type"
                                android:textColor="@color/red"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/materialType"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="12dp"
                                android:textSize="28sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/red"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/qtyDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:textSize="28sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/red"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/locDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="28sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frmInfo"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/bgBtnDefault"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Move"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

            </androidx.cardview.widget.CardView>

            <androidx.legacy.widget.Space
                android:id="@+id/moveBackSpace"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@id/cardMove" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/moveBackSpace"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/darkgrey"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Back"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/result_load"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp"
            android:visibility="visible">

            <ProgressBar
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center" />
        </FrameLayout>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>